--- a/Italian/main/MiBand.apk/res/values-it/arrays.xml
+++ b/Italian/main/MiBand.apk/res/values-it/arrays.xml
@@ -50,4 +50,54 @@
         <item>Fallo e basta.</item>
         <item>Continua ad allenarti, la vittoria arriverà da sola.</item>
     </string-array>
+    <string-array name="weather_aqi_descriptions">
+        <item>Eccellente</item>
+        <item>Buono</item>
+        <item>Leggero inquinamento</item>
+        <item>Inquinamento moderato</item>
+        <item>Molto inquinato</item>
+        <item>Estremamente inquinato</item>
+    </string-array>
+    <string-array name="weather_rains">
+        <item>Pioggia leggere</item>
+        <item>Temporale</item>
+        <item>Pioggia leggera</item>
+        <item>Pioggia</item>
+        <item>Pioggia intensa</item>
+        <item>Forte pioggia</item>
+        <item>Pioggia molto forte</item>
+        <item>Grandine</item>
+        <item>Temporale con grandine</item>
+    </string-array>
+    <string-array name="weather_rain_snows">
+        <item>Nevischio</item>
+    </string-array>
+    <string-array name="weather_snows">
+        <item>Neve leggera</item>
+        <item>Neve</item>
+        <item>Neve intensa</item>
+        <item>Forti nevicate</item>
+        <item>Tempesta di neve</item>
+    </string-array>
+    <string-array name="weather_sands">
+        <item>Polvere</item>
+        <item>Jansa</item>
+        <item>Tempesta di sabbia</item>
+        <item>Fortti tempeste</item>
+    </string-array>
+    <string-array name="weather_fine">
+        <item>Sereno</item>
+    </string-array>
+    <string-array name="weather_cloudy">
+        <item>Coperto</item>
+    </string-array>
+    <string-array name="weather_overcast">
+        <item>Coperto</item>
+    </string-array>
+    <string-array name="weather_fog">
+        <item>Nebbia</item>
+    </string-array>
+    <string-array name="weather_haze">
+        <item>Foschia</item>
+    </string-array>
 </resources>
