--- a/Italian/main/WeatherProvider.apk/res/values-it/arrays.xml
+++ b/Italian/main/WeatherProvider.apk/res/values-it/arrays.xml
@@ -36,4 +36,14 @@
         <item>Forte</item>
         <item>Molto forte</item>
     </string-array>
+    <string-array name="wind_direction">
+        <item>N</item>
+        <item>NE</item>
+        <item>E</item>
+        <item>SE</item>
+        <item>S</item>
+        <item>SO</item>
+        <item>O</item>
+        <item>NO</item>
+    </string-array>
 </resources>
