--- a/Italian/main/DeskClock.apk/res/values-it/plurals.xml
+++ b/Italian/main/DeskClock.apk/res/values-it/plurals.xml
@@ -4,32 +4,8 @@
         <item quantity="other">Rimanda di %d minuti.</item>
         <item quantity="one">Rimanda di un minuto.</item>
     </plurals>
-    <plurals name="snooze_duration">
-        <item quantity="other">%d minuti</item>
+    <plurals name="timer_item_duration_display_minutes">
+        <item quantity="other">%1$d minuti</item>
         <item quantity="one">1 minuto</item>
-    </plurals>
-    <plurals name="snooze_picker_label">
-        <item quantity="other">minuti</item>
-        <item quantity="one">minuto</item>
-    </plurals>
-    <plurals name="Nhours_description">
-        <item quantity="other">%d ore</item>
-        <item quantity="one">1 ora</item>
-    </plurals>
-    <plurals name="Nminutes_description">
-        <item quantity="other">%d minuti</item>
-        <item quantity="one">1 minuto</item>
-    </plurals>
-    <plurals name="Nseconds_description">
-        <item quantity="other">%d secondi</item>
-        <item quantity="one">1 secondo</item>
-    </plurals>
-    <plurals name="timers_num">
-        <item quantity="other">%d timer</item>
-        <item quantity="one">1 minuto</item>
-    </plurals>
-    <plurals name="alarm_delete_confirmation">
-        <item quantity="other">Eliminare gli allarmi selezionati?</item>
-        <item quantity="one">"Eliminare l'allarme selezionato?"</item>
     </plurals>
 </resources>
