--- a/Italian/main/FileExplorer.apk/res/values-it/plurals.xml
+++ b/Italian/main/FileExplorer.apk/res/values-it/plurals.xml
@@ -18,7 +18,7 @@
     </plurals>
     <plurals name="directory_item_count">
         <item quantity="other">%d elementi</item>
-        <item quantity="zero">%d elementi</item>
+        <item quantity="zero">%d elemento</item>
         <item quantity="one">%d elementi</item>
         <item quantity="two">%d elementi</item>
         <item quantity="few">%d elementi</item>
