--- a/Italian/main/WeatherProvider.apk/res/values-it/arrays.xml
+++ b/Italian/main/WeatherProvider.apk/res/values-it/arrays.xml
@@ -31,7 +31,7 @@
     </string-array>
     <string-array name="weather_indexes_uv_level">
         <item>Molto debole</item>
-        <item>Devole</item>
+        <item>Debole</item>
         <item>Medio</item>
         <item>Forte</item>
         <item>Molto forte</item>
