--- a/Italian/main/Settings.apk/res/values-it/arrays.xml
+++ b/Italian/main/Settings.apk/res/values-it/arrays.xml
@@ -373,6 +373,16 @@
         <item>Scala animazione 5x</item>
         <item>Scala animazione 10x</item>
     </string-array>
+	    <string-array name="overlay_display_devices_entries">
+        <item>Nessuno</item>
+        <item>720x480 mdpi</item>
+        <item>720x480 mdpi (sicuro)</item>
+        <item>1280x720 tvdpi</item>
+        <item>1280x720 tvdpi (sicuro)</item>
+        <item>1920x1080 xhdpi</item>
+        <item>1920x1080 xhdpi (sicuro)</item>
+        <item>1280x720 tvdpi e 1920x1080 xhdpi</item>
+    </string-array>
     <string-array name="enable_opengl_traces_entries">
         <item>Nessuna</item>
         <item>Logcat</item>
@@ -588,5 +598,11 @@
         <item>Minimo ritardo</item>
         <item>Normale</item>
         <item>Migliore qualità</item>
+    </string-array>
+	    <string-array name="whetstone_level_entries">
+        <item>Disattivato</item>
+        <item>Basso</item>
+        <item>Medio</item>
+        <item>Alto</item>
     </string-array>
 </resources>
