--- a/Italian/main/SecurityCenter.apk/res/values-it/plurals.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/plurals.xml
@@ -12,4 +12,32 @@
         <item quantity="other">"%d minuti "</item>
         <item quantity="one">"%d minuto "</item>
     </plurals>
+    <plurals name="hints_auto_start_enable_title">
+        <item quantity="other">%d app possono autoavviarsi</item>
+        <item quantity="one">%d app può autoavviarsi</item>
+    </plurals>
+    <plurals name="hints_auto_start_disable_title">
+        <item quantity="other">%d app non è consentito autoavviarsi</item>
+        <item quantity="one">%d app non è consentito autoavviarsi</item>
+    </plurals>
+    <plurals name="hints_apps_perm_count">
+        <item quantity="other">%d permessi</item>
+        <item quantity="one">%d permesso</item>
+    </plurals>
+    <plurals name="hints_permission_apps_count">
+        <item quantity="other">%d app</item>
+        <item quantity="one">%d app</item>
+    </plurals>
+    <plurals name="hints_get_root_enable_title">
+        <item quantity="other">%d app hanno i permessi di ROOT</item>
+        <item quantity="one">%d app ha i permessi di ROOT</item>
+    </plurals>
+    <plurals name="hints_get_root_disable_title">
+        <item quantity="other">%d app non hanno i permessi di ROOT</item>
+        <item quantity="one">%d app non ha i permessi di ROOT</item>
+    </plurals>
+    <plurals name="summary_app_update">
+        <item quantity="other">Aggiornamento disponibile per %d applicazioni.</item>
+        <item quantity="one">Aggiornamento disponibile per %d applicazione.</item>
+    </plurals>
 </resources>
