--- a/Italian/main/MiuiGallery.apk/res/values-it/plurals.xml
+++ b/Italian/main/MiuiGallery.apk/res/values-it/plurals.xml
@@ -9,20 +9,20 @@
         <item quantity="one">Cancellare %s foto?</item>
     </plurals>
     <plurals name="confirm_delete_has_cloud_video">
-        <item quantity="other">Cancellare %s video dal &amp;lt;b>cloud&amp;lt;/b>?</item>
-        <item quantity="one">Cancellare %s video dal &amp;lt;b>cloud&amp;lt;/b>?</item>
+        <item quantity="other">Cancellare %s video dal cloud?</item>
+        <item quantity="one">Cancellare %s video dal cloud?</item>
     </plurals>
     <plurals name="confirm_delete_has_local_video">
         <item quantity="other">Cancellare %s video?</item>
         <item quantity="one">Cancellare %s video?</item>
     </plurals>
     <plurals name="confirm_delete_has_cloud_local_image">
-        <item quantity="other">Cancellare %s foto sia in &amp;lt;b>locale che dal cloud&amp;lt;/b>?</item>
-        <item quantity="one">Cancellare %s foto sia in &amp;lt;b>locale che dal cloud&amp;lt;/b>?</item>
+        <item quantity="other">Cancellare %s foto sia in locale che dal cloud?</item>
+        <item quantity="one">Cancellare %s foto sia in locale che dal cloud?</item>
     </plurals>
     <plurals name="confirm_delete_has_cloud_local_video">
-        <item quantity="other">Cancellare %s video sia in &amp;lt;b>locale che dal cloud&amp;lt;/b>?</item>
-        <item quantity="one">Cancellare %s video sia in &amp;lt;b>locale che dal cloud&amp;lt;/b>?</item>
+        <item quantity="other">Cancellare %s video sia in locale che dal cloud?</item>
+        <item quantity="one">Cancellare %s video sia in locale che dal cloud?</item>
     </plurals>
     <plurals name="number_of_items_selected">
         <item quantity="other">%1$d elementi</item>
